--- a/src/assets/scss/core/_base.scss
+++ b/src/assets/scss/core/_base.scss
@@ -19,6 +19,7 @@ body {
   color: $gray500;
   font-size: 14px;
   line-height: 1;
+  letter-spacing: -.14px;
   font-weight: 400;
 
   &::-webkit-scrollbar {
