--- a/src/assets/scss/core/_variables.scss
+++ b/src/assets/scss/core/_variables.scss
@@ -1,7 +1,7 @@
 $white: #FFFFFF;
 $black: #000000;
 
-$gray500: #2b3f57;
+$gray500: #2B3F57;
 $gray400: #8694A7;
 $gray300: #BAC5D3;
 $gray200: #E4EBF4;
